--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -1,73 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:stretchColumns="0,1"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.MenuActivity"
-    tools:showIn="@layout/activity_menu">
+<!--<android.support.v4.widget.DrawerLayout android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
 
-        <TextView
-            android:id="@+id/tvProfile"
-            android:layout_margin="8dp"
-            android:drawableTop="@drawable/ic_launcher_background"
-            android:gravity="center"
-            android:text="@string/user" />
+        <!--<include layout="@layout/menu_toolbar"/>-->
 
-        <TextView
-            android:id="@+id/tvBook"
-            android:layout_margin="8dp"
-            android:gravity="center"
-            android:drawableTop="@drawable/ic_launcher_background"
-            android:text="@string/book"/>
+        <TableLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="0,1"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context=".activity.MenuActivity"
+            tools:showIn="@layout/activity_menu">
 
-    </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tvProfile"
+                    android:layout_margin="8dp"
+                    android:drawableTop="@drawable/admin"
+                    android:gravity="center"
+                    android:text="@string/user" />
 
-        <TextView
-            android:id="@+id/tvCategory"
-            android:layout_margin="8dp"
-            android:drawableTop="@drawable/ic_launcher_background"
-            android:gravity="center"
-            android:text="@string/category" />
+                <TextView
+                    android:id="@+id/tvBook"
+                    android:layout_margin="8dp"
+                    android:gravity="center"
+                    android:drawableTop="@drawable/book_icon"
+                    android:text="@string/book"/>
 
-        <TextView
-            android:id="@+id/tvInvoice"
-            android:layout_margin="8dp"
-            android:gravity="center"
-            android:drawableTop="@drawable/ic_launcher_background"
-            android:text="@string/invoice"/>
+            </TableRow>
 
-    </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tvCategory"
+                    android:layout_margin="8dp"
+                    android:drawableTop="@drawable/category_icon"
+                    android:gravity="center"
+                    android:text="@string/category" />
 
-        <TextView
-            android:id="@+id/tvBestSell"
-            android:layout_margin="8dp"
-            android:gravity="center"
-            android:drawableTop="@drawable/ic_launcher_background"
-            android:text="@string/best_selling"/>
+                <TextView
+                    android:id="@+id/tvInvoice"
+                    android:layout_margin="8dp"
+                    android:gravity="center"
+                    android:drawableTop="@drawable/invoice_icon"
+                    android:text="@string/invoice"/>
 
-        <TextView
-            android:id="@+id/tvStatistical"
-            android:layout_margin="8dp"
-            android:gravity="center"
-            android:drawableTop="@drawable/ic_launcher_background"
-            android:text="@string/statistical"/>
+            </TableRow>
 
-    </TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-</TableLayout>
+                <TextView
+                    android:id="@+id/tvBestSell"
+                    android:layout_margin="8dp"
+                    android:gravity="center"
+                    android:drawableTop="@drawable/best_sell_icon"
+                    android:text="@string/best_selling"/>
+
+                <TextView
+                    android:id="@+id/tvStatistical"
+                    android:layout_margin="8dp"
+                    android:gravity="center"
+                    android:drawableTop="@drawable/statitiscal_icon"
+                    android:text="@string/statistical"/>
+
+            </TableRow>
+
+        </TableLayout>
+
+    <!--</LinearLayout>-->
+    <!---->
+    <!--<android.support.design.widget.NavigationView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start">-->
+
+    <!--</android.support.design.widget.NavigationView>-->
+
+<!--</android.support.v4.widget.DrawerLayout>-->
