--- a/app/src/main/res/layout/content_book.xml
+++ b/app/src/main/res/layout/content_book.xml
@@ -8,5 +8,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.BookActivity"
     tools:showIn="@layout/activity_book">
+    
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/lvList">
+
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
