--- a/app/src/main/res/layout/content_test.xml
+++ b/app/src/main/res/layout/content_test.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activity.TestActivity"
-    tools:showIn="@layout/app_bar_test">
+    tools:showIn="@layout/app_bar_menu">
 
 </android.support.constraint.ConstraintLayout>
