--- a/app/src/main/res/layout/content_category.xml
+++ b/app/src/main/res/layout/content_category.xml
@@ -8,4 +8,11 @@
     tools:context=".activity.CategoryActivity"
     tools:showIn="@layout/activity_category">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lvList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
 </android.support.constraint.ConstraintLayout>
