--- a/app/src/main/res/layout/content_add_book.xml
+++ b/app/src/main/res/layout/content_add_book.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="number"
+                android:inputType="text"
                 android:hint="@string/edt_input_book_id" />
 
         </android.support.design.widget.TextInputLayout>
@@ -112,7 +112,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text"
+                android:inputType="numberDecimal"
                 android:hint="@string/edt_input_book_price" />
 
         </android.support.design.widget.TextInputLayout>
@@ -127,7 +127,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="text"
+                android:inputType="number"
                 android:hint="@string/edt_input_book_quantity" />
 
         </android.support.design.widget.TextInputLayout>
