--- a/app/src/main/res/layout/dialog_edit_user.xml
+++ b/app/src/main/res/layout/dialog_edit_user.xml
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.AddUserActivity"
-    tools:showIn="@layout/activity_add_user">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:padding="8dp">
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -30,39 +21,6 @@
                 android:ems="10"
                 android:inputType="text"
                 android:hint="@string/edt_input_user_uname" />
-
-        </android.support.design.widget.TextInputLayout>
-
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="5"
-            android:layout_margin="8dp">
-
-            <EditText
-                android:id="@+id/edtPass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:hint="@string/edt_input_user_password" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp">
-
-            <EditText
-                android:id="@+id/edtRePass"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:hint="@string/edt_input_user_re_password" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -104,30 +62,22 @@
 
             <Button
                 android:textAllCaps="true"
-                android:id="@+id/btnAdd"
+                android:id="@+id/btnSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/btn_action_add" />
+                android:text="@string/btn_action_save" />
 
             <Button
                 android:textAllCaps="true"
-                android:id="@+id/btnReset"
+                android:id="@+id/btnCancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/btn_action_reset" />
+                android:text="@string/btn_action_cancel" />
 
         </LinearLayout>
 
-        <Button
-            android:textAllCaps="true"
-            android:id="@+id/btnShow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_action_show"
-            android:layout_margin="8dp"/>
-
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
